# chat-with-pdf

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
app/: __init__.py  dockerfile  environment.py  main.py
app/config/: __init__.py  di_container.py
app/controllers/: __init__.py  document_controller.py  question_controller.py
app/domain/entities/: __init__.py  search_entities.py
app/domain/interfaces/: __init__.py  search_repository_interface.py  text_encoder_interface.py  vector_store_interface.py
app/domain/models/: __init__.py  document.py  question.py  search.py
app/domain/services/: __init__.py
app/framework/apis/: __init__.py  assistant_router.py  base_api.py  pdf_chat_router.py
app/framework/llm/chains/: generate_answer_chain.py
app/framework/llm/prompts/: rag_generate_answer.py
app/infra/encoders/: __init__.py  bert_text_encoder.py  openai_text_encoder.py
app/infra/gateways/: __init__.py  pinecone_client.py
app/infra/llm/chains/: __init__.py  generate_answer_chain.py
app/infra/llm/prompts/: __init__.py  rag_generate_answer.py
app/infra/repositories/: __init__.py  pinecone_search_repository.py
app/infra/services/: __init__.py  document_processing_service.py  question_answering_service.py
notebooks/: PdfParseTests.ipynb  RagEvaluateTests.ipynb
ui/: chat.py  dockerfile
