[project]
name = "chat-with-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "python-dotenv==1.0.1",
    "langchain==0.3.18",
    "uvicorn==0.28.0",
    "langchain-openai==0.3.6",
    "langchain-core==0.3.47",
    "langgraph==0.3.18",
    "langchain-google-genai==2.0.9",
    "langchain-community==0.3.17",
    "kink==0.8.1",
    "langchain-groq==0.3.1",
    "requests==2.31.0",
    "python-multipart==0.0.20", 
    "ipykernel"
]

[dependency-groups]
lint = [
    "ruff>=0.11.13",
]
ui = [
    "streamlit==1.27.0",
]
